# jvm/http-api/src/main/kotlin/pt/isel/models/rule/RuleLocationInput.kt
@@ -1,9 +1,5 @@
 package pt.isel.models.rule
 
-import kotlinx.datetime.LocalDateTime
-
 data class RuleLocationInput(
-    val startTime: LocalDateTime,
-    val endTime: LocalDateTime,
     val locationId: Int,
 )
